k8/API/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: url-shortener
  labels:
    app.kubernetes.io/name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api
    spec:
      serviceAccountName: api-sa
      containers:
        - name: api
          image: 679930074435.dkr.ecr.eu-west-2.amazonaws.com/api_image
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
