k8/API/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: url-shortener
  labels:
    app.kubernetes.io/name: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
